Discover Users with completenessScore